--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,25 @@
 <resources>
-    <string name="app_name">ProjectStock</string>
+    <string name="app_name">Склад</string>
+    <string name="vendor_code">Артикл</string>
+    <string name="code">Код</string>
+    <string name="name_item">Название</string>
+    <string name="quantity">Кол-во</string>
+    <string name="place">Место</string>
+    <string name="enter">Введите:</string>
+    <string name="save_changes">Сохранить изменения</string>
+    <string name="delete_item">Удалить элемент</string>
+    <string name="add_item">Добавить элемент</string>
+    <string name="delete_message">Вы точно хотите удалить элемент?</string>
+    <string name="yes">Да</string>
+    <string name="no">Нет</string>
+    <string name="operation">Операция</string>
+    <string name="received">Поступило</string>
+    <string name="write_off">Списание</string>
+    <string name="remainder">Остаток</string>
+    <string name="date">Дата</string>
+
+    <array name="my_array">
+        <item>1 Мес</item>
+        <item>За всё время</item>
+    </array>
 </resources>
